Adds the a first version of a cd command which is able to change the execution directory of processes on shell.